boards/pt2: configure bootrom flash delays
So that on reboot, flash is power cycles and so put into 3-byte
addressing mode (only mode supported by bootrom).

Signed-off-by: Gerard Marull-Paretas <gerard@teslabs.com>

--- a/boards/coredevices/pt2/pt2_defconfig
+++ b/boards/coredevices/pt2/pt2_defconfig
@@ -9,3 +9,6 @@ CONFIG_GPIO=y
 
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
+
+CONFIG_SF32LB52X_BOOTROM_FLASH_ON_DELAY_MS=100
+CONFIG_SF32LB52X_BOOTROM_FLASH_OFF_DELAY_MS=100
