--- a/west.yml
+++ b/west.yml
@@ -9,7 +9,7 @@ manifest:
   projects:
     - name: zephyr
       remote: teslabs
-      revision: sf32lb52x-flash
+      revision: sf32lb52x-pblboot
       import:
         name-allowlist:
           - cmsis_6
