drivers/console: add pulse uart console driver
Signed-off-by: Gerard Marull-Paretas <gerard@teslabs.com>

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,5 +1,4 @@
 # Copyright (c) 2025 Core Devices LLC
 # SPDX-License-Identifier: Apache-2.0
 
-rsource "drivers/Kconfig"
-rsource "lib/Kconfig"
+add_subdirectory_ifdef(CONFIG_CONSOLE console)
