boot: use pulse uart console
Signed-off-by: Gerard Marull-Paretas <gerard@teslabs.com>

--- a/boot/prj.conf
+++ b/boot/prj.conf
@@ -12,5 +12,8 @@ CONFIG_LOG=y
 CONFIG_LOG_MODE_MINIMAL=y
 CONFIG_REBOOT=y
 
+CONFIG_PULSE_UART_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+
 CONFIG_PB_BOOTBIT=y
 CONFIG_PB_FWJUMP=y
