--- a/lib/pb/CMakeLists.txt
+++ b/lib/pb/CMakeLists.txt
@@ -2,4 +2,5 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_subdirectory_ifdef(CONFIG_PB_BOOTBIT bootbit)
+add_subdirectory_ifdef(CONFIG_PB_COBS cobs)
 add_subdirectory_ifdef(CONFIG_PB_FWJUMP fwjump)
